# ros2_traffic_detector

./: .gitignore
datasets/rgb/: generate_dummy_labels.py
datasets/traffic_light_custom/: data.yaml
datasets/traffic_light_custom/labels/: train.cache
install/: local_setup.sh  setup.sh
install/ros2_traffic_detector/lib/ros2_traffic_detector/: image_publisher  traffic_light_infer
install/ros2_traffic_detector/share/ros2_traffic_detector/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/traffic_detector/share/traffic_detector/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
runs/detect/traffic_light_classifier/: args.yaml  results.csv
src/: classifier_node.py.save  image_publisher_node.py
src/traffic_detector/: setup.cfg  setup.py
src/traffic_detector/traffic_detector/: publish_test_image.py
src/traffic_light_detector/: package.xml  setup.py  traffic_light_infer.py
src/traffic_light_detector/traffic_light_detector/: generate_sample_images.py  test_image_publisher.py  traffic_light_detector_node.py
src/traffic_perception/: package.xml  setup.cfg  setup.py
src/traffic_sign_detector/: package.xml  setup.py  test_sign - Copy.jpg:Zone.Identifier
src/traffic_sign_detector/traffic_sign_detector/: classifier_node.py  dataset_publisher_node.py  image_publisher_node.py  setup.py  traffic_sign_infer.py  traffic_sign_node.py
src/vehiclecontrol/: package.xml  setup.cfg  setup.py
src/vehiclecontrol/vehiclecontrol/: test_vehicle_control_publisher.py.save
(+2 files in other folders)
