<package format="3">
  <name>traffic_sign_detector</name>
  <version>0.0.0</version>
  <description>Traffic sign detection using YOLOv8</description>
  <maintainer email="ponnu@example.com">ponnu</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
